#84 fixing editing spetializations

--- a/angular-three/src/app/pages/Admin/admin/admin.component.html
+++ b/angular-three/src/app/pages/Admin/admin/admin.component.html
@@ -2544,14 +2544,14 @@
           <!-- Specialization Designation -->
           <div class="col-md-6">
               <label for="specializationName" class="form-label">Specialization Designation</label>
-              <input type="text" class="form-control" id="specializationName" formControlName="designacao" name="specializationName" required />
+              <input type="text" class="form-control" id="specializationName" formControlName="SpecializationName" name="specializationName" required />
               <div class="valid-feedback">Looks good!</div>
           </div>
 
           <!-- Specialization Description -->
           <div class="col-md-6">
               <label for="specializationDescription" class="form-label">Specialization Description</label>
-              <input type="text" class="form-control" id="specializationDescription" formControlName="descricao" name="specializationDescription" required />
+              <input type="text" class="form-control" id="specializationDescription" formControlName="SpecializationDescription" name="specializationDescription" required />
               <div class="valid-feedback">Looks good!</div>
             </div>
 
