--- a/angular-three/src/app/pages/Doctor/doctor/doctor.component.html
+++ b/angular-three/src/app/pages/Doctor/doctor/doctor.component.html
@@ -650,6 +650,9 @@
         </div>
 
 
+        
+
+
 
 
         <div class="col-md-2">
@@ -684,13 +687,36 @@
 
         <div class="col-mb-6"></div>
 
+        
+        <div class="col-md-6">
+          <ul id="descriptions">
+            <li *ngFor="let description of descricaoList; let i = index" class="description">
+              {{ description }} 
+              <button type="button" class="delete-button" (click)="removeDescription(i); $event.preventDefault()">
+                X
+              </button>
+            </li>
+          </ul>
+        </div>
 
-        <div class="col-md-6 mb-4">
+        <div class="col-mb-6"></div>
+
+
+        <div class="col-md-6">
           <label for="descricao" class="form-label">Medical Record Description</label>
-          <input type="text" class="form-control" id="descricao" [(ngModel)]="medicalRecordRequest.descricao"
+          <input type="text" class="form-control" id="descricao" [(ngModel)]="filterTextDescription"
             name="descricao" required />
           <div class="valid-feedback">Looks good!</div>
         </div>
+
+     
+      <div class="col-12">
+        <button type="button" class="btn btn-primary" (click)="addDescription()">Add Description</button>
+      </div>
+
+
+
+    <div class="col-mb-6"></div>
 
         <div class="col-12" style="margin-bottom: 20px;">
           <button type="button" class="btn btn-secondary" (click)="openPolicyModal()">Read and Agree to Policy</button>
@@ -916,7 +942,13 @@
                         </ul>
                       </td>
 
-                      <td>{{ request.descricao }}</td>
+                      <td>
+                        <ul style="list-style-type: none; padding: 0; margin: 0;">
+                          <li *ngFor="let description of request.descricao">{{ description }}</li>
+                        </ul>
+                      </td>
+
+                     
                       <!--<td>-->
                       <!-- <button class="btn btn-warning" (click)="setUpdateRequest(request)">
                         <i class="bi bi-pencil"></i>
@@ -958,13 +990,44 @@
             <div class="col-md-12"></div>
 
             <!-- Description Field -->
+             <div class="col-md-12">
+              <div class="input-group has-validation">
+                <span class="input-group-text" style="width:20%" id="basic-addon1"><i class="bi bi-virus"></i></span>
+                <span class="input-group-text" style="width:60%" id="add">Desciption</span>
+              </div>
+              <table class="table table-striped table-hover table-over-update">
+                <thead>
+                  <tr>
+                    <th>#</th>
+                     <th>Description</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let desciption of descricaoList; let i = index">
+                    <td>{{ i + 1 }}</td>
+                    <td>{{ desciption }}</td>
+                    <td> <button type="button" class="btn btn-danger"
+                        (click)="removeDescription(i); $event.preventDefault()"> <i class="bi bi-trash"></i> </button></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+
+          
+
+
             <div class="col-md-3">
               <div class="input-group has-validation">
                 <span class="input-group-text" id="basic-addon1"><i class="bi bi-person-vcard-fill"></i> </span>
-                <input type="text" class="form-control" id="updateMedicalRecordDescription"[(ngModel)]="medicalRecordProfileUpdate.descricao"
+                <input type="text" class="form-control" id="updateMedicalRecordDescription"[(ngModel)]="filterTextDescription"
                   [ngModelOptions]="{standalone: true}" placeholder="Description" name="descriptionUpdate">
               </div>
             </div>
+
+            <div class="col-12">
+              <button type="button" class="btn btn-primary" (click)="addDescription()">Add Description</button>
+            </div>
+
 
             <hr>
 
@@ -997,6 +1060,8 @@
               </table>
             </div>
 
+            
+
             <div class="dropdown">
               <label for="tag-filter" class="form-label">Allergies</label>
               <div class="tags-input">
@@ -1011,6 +1076,7 @@
                 </li>
               </ul>
             </div>
+            
 
             <div class="col-md-5">
               <label for="descricaoAllergie" class="form-label">Description</label>
@@ -1033,14 +1099,13 @@
                   </li>
                 </ul>
               </div>
-
             </div>
 
             <div class="col-12" style="margin-bottom: 30px;">
-              <button type="button" class="btn btn-primaryUpdate"  (click)="addAllergie()">Add Allergie</button>
+              <button type="button" class="btn btn-primary"  (click)="addAllergie()">Add Allergie</button>
             </div>
 
-            <div class="col-mb-4"></div>
+             <div class="col-mb-4"></div>
 
 
             <!-- Medical Conditions Section -->
@@ -1130,19 +1195,19 @@
 
             </div>
             <div class="col-12" style="margin-bottom: 30px;">
-              <button type="button" class="btn btn-primaryUpdate" (click)="addMedicalCondition()">Add Condition</button>
+              <button type="button" class="btn btn-primary" (click)="addMedicalCondition()">Add Condition</button>
             </div>
 
 
           </div>
 
-          <div class="col-12">
-            <button type="button" class="btn btn-secondaryUpdate" (click)="openPolicyModal()">Read and Agree to Policy</button>
+          <div class="col-12" style="margin-bottom: 20px;">
+            <button type="button" class="btn btn-secondary" (click)="openPolicyModal()">Read and Agree to Policy</button>
           </div>
 
 
 
-          <button class="btn btn-primaryUpdate" [disabled]="!isPolicyAccepted" id="updateMedicalRecord" (click)="onUpdateMedicalRecord()">Edit Medical Record</button>
+          <button class="btn btn-primary" [disabled]="!isPolicyAccepted" id="updateMedicalRecord" (click)="onUpdateMedicalRecord()">Edit Medical Record</button>
         </div>
       </form>
     </div>
