--- a/angular-three/src/app/pages/Doctor/doctor/doctor.component.html
+++ b/angular-three/src/app/pages/Doctor/doctor/doctor.component.html
@@ -1068,6 +1068,8 @@ id="updateAppointmentModal" class="modal">
 
           <div class="col-md-9"></div>
           <div class="col-md-3">
+            <button class="fs-5 btn btn-outline-info" (click)="getMedicalRecord()">Filter <i class="bi bi-info-square-fill"></i></button>
+            
             <button class="fs-5 btn btn-outline-warning" id="editMedicalRecord" (click)="editMedicalRecord()">Edit <i
                 class="bi bi-pencil-square"></i></button>
 
@@ -1076,6 +1078,88 @@ id="updateAppointmentModal" class="modal">
         </form>
       </div>
 
+    </div>
+  </div>
+
+
+  <div [ngStyle]="{'display': isModalOpen('ViewMedicalRecord') ? 'block' : 'none'}" id="ViewMedicalRecord" class="modal">
+    <div class="modal-content">
+      <span (click)="closeModal('ViewMedicalRecord')" class="close">&times;</span>
+      <form  class="row g-3 needs-validation" novalidate="">
+        <div *ngIf="medicalRecordProfile">
+          <div class="row g-3 needs-validation">
+            <div class="col-md-12"></div>
+    
+        
+  
+              <!-- Allergies Section -->
+              <div class="col-md-10">
+                <div class="input-group has-validation">
+                  <span class="input-group-text" style="width:20%" id="basic-addon1"><i class="bi bi-virus"></i></span>
+                  <span class="input-group-text" style="width:60%" id="add">Allergies</span>
+                </div>
+                <table class="table table-striped table-hover table-over-update">
+                  <thead>
+                    <tr>
+                      <th>#</th>
+                      <th>Name</th>
+                      <th>Description</th>
+                      <th>Status</th>
+                    </tr>
+                  </thead>
+                  <tbody>               
+                    <tr *ngFor="let tag of tagsAllergies; let i = index">
+                      <td>{{ i + 1 }}</td>
+                      <td>{{ tag.designacao }}</td>
+                      <td>{{ tag.descricao }}</td>
+                      <td>{{ tag.status }}</td>
+                     
+                    </tr>                
+                  </tbody>
+                </table>
+              </div>
+            
+    
+  
+  
+            <div class="col-mb-4"></div>
+  
+  
+            <!-- Medical Conditions Section -->
+            <div class="col-md-10">
+              <div class="input-group has-validation">
+                <span class="input-group-text" style="width:20%" id="basic-addon1"><i class="bi bi-virus"></i></span>
+                <span class="input-group-text" style="width:60%" id="add">Medical Conditions</span>
+              </div>
+              <table class="table table-striped table-hover table-over-update">
+                <thead>
+                  <tr>
+                    <th>#</th>
+                    <th>Code</th>
+                    <th>Name</th>
+                    <th>Description</th>
+                    <th>Status</th>
+                    <th>Symptoms</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let condition of tagsConditions; let i = index">
+                    <td>{{ i + 1 }}</td>
+                    <td>{{ condition.codigo }}</td>
+                    <td>{{ condition.designacao }}</td>
+                    <td>{{ condition.descricao }}</td>
+                    <td>{{ condition.status }}</td>
+                    <td>{{ condition.sintomas }}</td>
+                   
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+  
+          </div>         
+        </div>
+      </form>
+       
     </div>
   </div>
 
