--- a/angular-three/src/app/pages/Admin/admin/admin.component.html
+++ b/angular-three/src/app/pages/Admin/admin/admin.component.html
@@ -812,6 +812,33 @@
           </table>
         </div>
 
+        <div class="col-md-10">
+          <div class="input-group has-validation">
+            <span class="input-group-text" style="width:20%" id="basic-addon1"><i class="bi bi-virus"></i></span>
+            <span class="input-group-text" style="width:60%" id="add">Free text</span>
+          </div>
+          
+          <!-- Tabela será exibida apenas se descricaoList tiver itens -->
+          <table *ngIf="descricaoList && descricaoList.length > 0" class="table table-striped table-hover table-over-update" style="scrollbar-width: none;">
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>Description</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let description of descricaoList; let i = index">
+                <td>{{ i + 1 }}</td>
+                <td>{{ description }}</td>
+              </tr>
+            </tbody>
+          </table>
+        
+          <!-- Mensagem para quando não houver dados -->
+          <p *ngIf="descricaoList && descricaoList.length === 0" class="text-muted">No descriptions available.</p>
+        </div>
+        
+
         <div class="col-md-5" style="margin-bottom: 0;">
           <div class="input-group has-validation">
             <span class="input-group-text" id="basic-addon1"><i class="bi bi-clock-fill"></i></span>
