--- a/angular-three/src/app/pages/Doctor/doctor/doctor.component.html
+++ b/angular-three/src/app/pages/Doctor/doctor/doctor.component.html
@@ -856,9 +856,7 @@ id="updateAppointmentModal" class="modal">
       <span (click)="closePolicyModal()" class="close">&times;</span>
       <h3>Policy Agreement</h3>
       <p>
-        A sua privacidade é importante para nós. Este documento explica como recolhemos, utilizamos, partilhamos e
-        protegemos os seus dados pessoais no âmbito do nosso projeto hospitalar, em conformidade com o Regulamento Geral
-        sobre a Proteção de Dados (RGPD).
+        A sua privacidade é importante para nós. Este documento explica como recolhemos, utilizamos, partilhamos e protegemos os seus dados pessoais no âmbito do nosso projeto hospitalar, como alunos do cursos de Engenharia Informática do ISEP (Instituto Superior de Engenharia do Porto) em conformidade com o Regulamento Geral  sobre a Proteção de Dados (RGPD).
       </p>
 
       <h4>1. Quem Somos</h4>
@@ -886,41 +884,38 @@ id="updateAppointmentModal" class="modal">
 
       <h4 style="margin-top: 20px;">3. Tipo de Tratamento dos Dados Pessoais</h4>
       <p style="margin-bottom: 20px;">
-        Os dados pessoais serão utilizados para:
+        Os dados pessoais poderão ser usados por outros utilizadores da aplicação, no caso somente o próprio, o seu médico e terceiros com a devida autorização. <br>
+        Desta forma, os dados serão utilizados para:
       <ul>
-        <li>Recolha: Obter dados dos utilizadores para tratamento no sistema.</li>
-        <li>Destruição: Eliminar dados quando deixarem de ser relevantes, por exemplo, a pedido do titular.</li>
-        <li>Divulgação: Partilhar dados com terceiros, como médicos responsáveis.</li>
-        <li>Conservação: Armazenar os dados na base de dados.</li>
-        <li>Consulta: Permitir acesso por utilizadores autorizados (pacientes ou médicos/staff).</li>
-        <li>Alteração: Atualizar ou corrigir dados de utilizadores.</li>
-        <li>Organização: Estruturar os dados para consultas futuras.</li>
-        <li>Limitações: Restringir o acesso com base no papel do utilizador (ex.: pacientes acessam apenas os seus
-          próprios dados).</li>
+        <li><strong>Recolha:</strong> Obter dados dos utilizadores para tratamento no sistema.</li>
+        <li><strong>Destruição:</strong> Eliminar dados quando deixarem de ser relevantes, por exemplo, a pedido do titular.</li>
+        <li><strong>Divulgação:</strong> Partilhar dados com terceiros, como médicos responsáveis.</li>
+        <li><strong>Conservação:</strong> Armazenar os dados na base de dados.</li>
+        <li><strong>Consulta:</strong> Permitir acesso ao perfil do paciente por utilizadores autorizados (próprio ou médicos/staff: para confirmar dados, marcar cirurgias e registar o histórico médico do titular).</li>
+        <li><strong>Alteração:</strong> Atualizar ou corrigir dados de utilizadores.</li>
+        <li><strong>Organização:</strong> Estruturar os dados para consultas futuras.</li>
+        <li><strong>Limitações:</strong> Restringir o acesso com base no papel do utilizador (ex.: pacientes acessam apenas os seus próprios dados).</li>        
       </ul>
 
 
       <h4>4. Finalidades do Tratamento dos Dados</h4>
       <p style="margin-bottom: 20px;">
-        Os dados pessoais recolhidos são tratados para as seguintes finalidades:
+        Os dados pessoais recolhidos são tratados para as seguintes finalidades, de acordo com o Artigo 5.º 
+        do RGPD:
       <ul>
-        <li><strong>Agendamento e gestão de consultas:</strong> Nome, email, número de telemóvel, alergias e histórico
-          médico para organizar serviços clínicos.</li>
-        <li><strong>Personalização de experiências:</strong> Envio de mensagens personalizadas por email (e.g.,
-          lembretes de consultas).</li>
-        <li><strong>Emergências médicas:</strong> Contactos de emergência e informações de saúde essenciais para
-          proteção vital.</li>
-        <li><strong>Cumprimento de obrigações legais:</strong> Conservação de nome, morada, histórico médico, e alergias
-          por 20 anos, conforme exigido por lei.</li>
-        <li><strong>Monitorização do sistema:</strong> Nome, email, alergias e histórico de acessos para garantir a
-          eficiência e proteção dos dados.</li>
+        <li><strong>Agendamento e gestão de consultas e cirurgias:</strong> Os dados, como nome, email, número de telemóvel, alergias e histórico médico, são utilizados para organizar e gerir consultas e cirurgias com eficiência. Esses dados são essenciais para a prestação de serviços clínicos, garantindo que as necessidades do paciente sejam atendidas adequadamente. </li>
+        <li><strong>Personalização de experiências:</strong>Envio de mensagens personalizadas por email (e.g., lembretes de consultas ou outras comunicações relevantes para o paciente). </li>
+        <li><strong>Emergências médicas:</strong> Os contactos de emergência e informações de saúde, como histórico médico e alergias, são utilizados para proteger a vida e a integridade física do titular em emergências médica. </li>
+        <li><strong>Cumprimento de obrigações legais:</strong> Conservação de nome, morada, histórico médico, e alergias por 20 anos, após o último registro de atividade médica, conforme exigido por lei, uma vez que estes dados são essenciais para assegurar a continuidade dos cuidados de saúde. Para a personalização da experiencia, os dados serão guardados até que o titular solicite a revogação do consentimento ou os dados deixem de ser relevantes para a finalidade. </li>
+        <li><strong>Monitorização do sistema:</strong> Análise de dados como nome, email, histórico de acessos e alergias para garantir a segurança e eficiência do sistema de informação, evitando acessos não autorizados, perdas de dados ou falhas operacionais. 
+        </li>
+        <br> Sendo assim, cada finalidade é justificada conforme os Artigos 6.º e 9.º do RGPD.
       </ul>
 
 
       <h4>5. Base Legal para o Tratamento</h4>
       <p style="margin-bottom: 20px;">
-        O tratamento dos dados pessoais baseia-se nos seguintes fundamentos legais, conforme o Artigo 6.º e Artigo 9.º
-        do RGPD:
+        O tratamento dos dados pessoais baseia-se nos seguintes fundamentos legais, conforme o Artigo 6.º e Artigo 9.º do RGPD:
       <ul>
         <li><strong>Consentimento:</strong> Para comunicações personalizadas e partilha de dados com terceiros.</li>
         <li><strong>Execução de Contrato:</strong> Para a prestação de serviços de saúde contratados.</li>
@@ -966,6 +961,7 @@ id="updateAppointmentModal" class="modal">
         <li><strong>Portabilidade:</strong> Pode pedir uma cópia dos seus dados em formato eletrônico, na aplicação.
         </li>
         <li><strong>Oposição:</strong> Pode opor-se ao tratamento dos seus dados em certas situações.</li>
+        Caso o titular se recuse a consentir o tratamento dos dados, haverá restrições nas funcionalidades desta aplicação. Se for um paciente, não conseguirá atualizar o seu perfil. Para o caso de um médico ou staff, não será possível registar ou atualizar pacientes, criar ou atualizar alergias, condições médicas, histórico médico ou marcação de cirurgias. 
         <li><strong>Limitação:</strong> Pode solicitar a limitação do tratamento dos seus dados em condições
           específicas.</li>
       </ul>
@@ -975,12 +971,9 @@ id="updateAppointmentModal" class="modal">
         Para exercer os seus direitos, contacte-nos através do email {{ 'mtf&#64;isep.ipp.pt' }}.
       </p>
 
-
       <h4 style="margin-top: 20px;"> 9. Segurança dos Dados </h4>
       <p style="margin-bottom: 20px;">
-        Implementamos medidas de segurança técnicas e organizacionais para proteger os seus dados pessoais contra acesso
-        não autorizado, alteração, destruição ou divulgação. Asseguramos também a encriptação e monitorização regular do
-        sistema.
+        Implementamos medidas de segurança técnicas e organizacionais para proteger os seus dados pessoais contra acesso não autorizado, alteração, destruição ou divulgação. Asseguramos também a encriptação e monitorização regular do sistema.
       </p>
 
       <h4 style="margin-top: 20px;"> 10. Violações de Dados </h4>
@@ -996,7 +989,7 @@ id="updateAppointmentModal" class="modal">
       </p>
 
       <p style="margin-bottom: 20px;">
-        <strong> Data da última atualização: 15 de dezembro de 2024 </strong>
+        <strong> Data da última atualização: 27 de dezembro de 2024 </strong>
       </p>
 
 
@@ -1089,6 +1082,9 @@ id="updateAppointmentModal" class="modal">
         <div *ngIf="medicalRecordProfile">
           <div class="row g-3 needs-validation">
             <div class="col-md-12"></div>
+
+
+
     
         
   
@@ -1155,6 +1151,35 @@ id="updateAppointmentModal" class="modal">
                 </tbody>
               </table>
             </div>
+
+
+            <div class="col-md-4">
+              <div class="input-group has-validation">
+                <span class="input-group-text" style="width:20%" id="basic-addon1"><i class="bi bi-virus"></i></span>
+                <span class="input-group-text" style="width:60%" id="add">Free text</span>
+              </div>
+              
+              <!-- Tabela será exibida apenas se descricaoList tiver itens -->
+              <table *ngIf="descricaoList && descricaoList.length > 0" class="table table-striped table-hover table-over-update" style="scrollbar-width: none;">
+                <thead>
+                  <tr>
+                    <th>#</th>
+                    <th>Description</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let description of descricaoList; let i = index">
+                    <td>{{ i + 1 }}</td>
+                    <td>{{ description }}</td>
+                  </tr>
+                </tbody>
+              </table>
+            
+              <!-- Mensagem para quando não houver dados -->
+              <p *ngIf="descricaoList && descricaoList.length === 0" class="text-muted">No descriptions available.</p>
+            </div>
+            
+  
   
           </div>         
         </div>
