--- a/angular-three/src/app/pages/Patient/patient/patient.component.html
+++ b/angular-three/src/app/pages/Patient/patient/patient.component.html
@@ -547,7 +547,7 @@
                 <span class="input-group-text" style="width:20%" id="basic-addon1"><i class="bi bi-virus"></i></span>
                 <span class="input-group-text" style="width:60%" id="add">Allergies</span>
               </div>
-              <table class="table table-striped table-hover table-over-update">
+              <table class="table table-striped table-hover table-over-update" style="scrollbar-width: none;">
                 <thead>
                   <tr>
                     <th>#</th>
@@ -580,7 +580,7 @@
               <span class="input-group-text" style="width:20%" id="basic-addon1"><i class="bi bi-virus"></i></span>
               <span class="input-group-text" style="width:60%" id="add">Medical Conditions</span>
             </div>
-            <table class="table table-striped table-hover table-over-update">
+            <table class="table table-striped table-hover table-over-update"style="scrollbar-width: none;">
               <thead>
                 <tr>
                   <th>#</th>
@@ -605,6 +605,36 @@
             </table>
           </div>
 
+
+          <div class="col-md-10">
+            <div class="input-group has-validation">
+              <span class="input-group-text" style="width:20%" id="basic-addon1"><i class="bi bi-virus"></i></span>
+              <span class="input-group-text" style="width:60%" id="add">Free text</span>
+            </div>
+            
+            <!-- Tabela será exibida apenas se descricaoList tiver itens -->
+            <table *ngIf="descricaoList && descricaoList.length > 0" class="table table-striped table-hover table-over-update" style="scrollbar-width: none;">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th>Description</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let description of descricaoList; let i = index">
+                  <td>{{ i + 1 }}</td>
+                  <td>{{ description }}</td>
+                </tr>
+              </tbody>
+            </table>
+          
+            <!-- Mensagem para quando não houver dados -->
+            <p *ngIf="descricaoList && descricaoList.length === 0" class="text-muted">No descriptions available.</p>
+          </div>
+
+
+          
+          
         
 
          
